<resources>
    <string name="app_name">Currency Exchanger</string>
    <string name="txt_help">Help</string>
    <string name="txt_ok">OKay</string>
    <string name="txt_currency_rate">Curreny rate:</string>
    <string name="txt_empty_ntd">Empty NTD</string>
    <string name="txt_input_amount">Please input amount</string>
    <string name="currency_in_ntd">Currency in NTD:</string>
    <string name="currency_in_usd">Currency in USD:</string>
    <string name="currency_in_euro">Currency in Euro:</string>
    <string name="exchange">Exchange</string>
</resources>
